re PR target/39856 (ICE in subst_stack_regs_pat, at reg-stack.c:1386)

2009-05-22 Vladimir Makarov <vmakarov@redhat.com>

	PR target/39856
	* reg-stack.c (subst_stack_regs_pat): Remove gcc_assert for note
	for clobber.

From-SVN: r147804